--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </style>
 </head>
 <body>
+    <div class="background-image"></div>
     <header>            
         <p class='header-info'><b>Приватний нотаріус Івано-Франківського міського нотаріального округу</b></p>
     </header>
