--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="shortcut icon" href="./images/icons/page-icons.png" type="image/x-icon">
 
     <link rel="stylesheet" type="text/css" href="styles/header.css">
-    <link rel="stylesheet" type="text/css" href="styles/mainpage.css">
+    <link rel="stylesheet" type="text/css" href="styles/mainpage.css?ver=0.0.3">
     <link rel="stylesheet" type="text/css" href="styles/footer.css">
 
-    <script async src="./scripts/insert-div.js"></script>
+    <script async src="./scripts/insert-div.js?ver=0.0.2"></script>
     <script async src="./scripts/smooth-show.js"></script>
 
     <style>
@@ -31,6 +31,11 @@
     </header>
     
     <main class="container">
+        <div id="divViber">
+            <div id="triangle"></div>
+            <a href="viber://chat?number=380975405113"><img class="viber" src="./images/viber_logo.png" width="65vh"></a>
+        </div>
+
         <div class="container-info">
             <div class="container-about" id="divv">
                 <p class="container-about-p-one box">Приватний Нотаріус<br><strong>Чіпко Ігор Петрович</strong></p>
