--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M0CVC1ZWNS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-M0CVC1ZWNS');
+    </script>
+    <!-- Google tag (gtag.js) -->
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +44,12 @@
     <main class="container">
         <div id="divViber">
             <div id="triangle"></div>
+
             <a href="viber://chat?number=380975405113"><img class="viber" src="./images/viber_logo.png" width="65vh"></a>
+            <a href="whatsapp://send?phone=380975405113"><img class="whatsapp" src="./images/whatsapp_logo.png" width="65vh"></a>
+            <a href="https://t.me/reynesss" target="_blank"><img class="telegram" src="./images/telegram_logo.png" width="65vh"></a>
+            
+            <div class="circle"></div>
         </div>
 
         <div class="container-info">
