--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <script async src="./scripts/insert-div.js?ver=0.0.2"></script>
     <script async src="./scripts/smooth-show.js"></script>
+    <script async src="./scripts/drop-down.js"></script>
 
     <style>
         * {
@@ -45,11 +46,11 @@
         <div id="divViber">
             <div id="triangle"></div>
 
-            <a href="viber://chat?number=380975405113"><img class="viber" src="./images/viber_logo.png" width="65vh"></a>
-            <a href="whatsapp://send?phone=380975405113"><img class="whatsapp" src="./images/whatsapp_logo.png" width="65vh"></a>
-            <a href="https://t.me/reynesss" target="_blank"><img class="telegram" src="./images/telegram_logo.png" width="65vh"></a>
+            <a href="viber://chat?number=380975405113" style="cursor: pointer; transform: translate(0%, -207px); position: fixed; right: 0;"><img class="viber" src="./images/viber_logo.png" width="65vh"></a>
+            <a href="whatsapp://send?phone=380975405113" style="cursor: pointer; transform: translate(0%, -135px); position: fixed; right: 0;"><img class="whatsapp" src="./images/whatsapp_logo.png" width="65vh"></a>
+            <a href="https://t.me/reynesss" target="_blank" style="cursor: pointer; transform: translate(0%, -65px); position: fixed; right: 0;"><img class="telegram" src="./images/telegram_logo.png" width="65vh"></a>
             
-            <div class="circle"></div>
+            <div class="circle" style="position: fixed; right: 0;"></div>
         </div>
 
         <div class="container-info">
