--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     
     <main class="container">
         <div id="divViber">
-            <div id="triangle"></div>
+            <!-- <div id="triangle"></div> -->
 
             <a href="viber://chat?number=380975405113" style="cursor: pointer; transform: translate(0%, -207px); position: fixed; right: 0;"><img class="viber" src="./images/viber_logo.png" width="65vh"></a>
             <a href="whatsapp://send?phone=380975405113" style="cursor: pointer; transform: translate(0%, -135px); position: fixed; right: 0;"><img class="whatsapp" src="./images/whatsapp_logo.png" width="65vh"></a>
             <a href="https://t.me/reynesss" target="_blank" style="cursor: pointer; transform: translate(0%, -65px); position: fixed; right: 0;"><img class="telegram" src="./images/telegram_logo.png" width="65vh"></a>
             
-            <a class="circle" style="position: fixed; right: 0;"></a>
+            <a class="circle" style="position: fixed; right: 0;">+</a>
         </div>
 
         <div class="container-info">
