--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="whatsapp://send?phone=380975405113" style="cursor: pointer; transform: translate(0%, -135px); position: fixed; right: 0;"><img class="whatsapp" src="./images/whatsapp_logo.png" width="65vh"></a>
             <a href="https://t.me/reynesss" target="_blank" style="cursor: pointer; transform: translate(0%, -65px); position: fixed; right: 0;"><img class="telegram" src="./images/telegram_logo.png" width="65vh"></a>
             
-            <a class="circle" style="position: fixed; right: 0;"></a>
+            <a class="circle" style="position: fixed; right: 0;"><img src="./images/circle.png"></a>
         </div>
 
         <div class="container-info">
