--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <link rel="shortcut icon" href="./images/icons/page-icons.png" type="image/x-icon">
 
     <link rel="stylesheet" type="text/css" href="styles/header.css">
-    <link rel="stylesheet" type="text/css" href="styles/mainpage.css?ver=0.0.3">
+    <link rel="stylesheet" type="text/css" href="styles/mainpage.css?ver=0.0.4">
     <link rel="stylesheet" type="text/css" href="styles/footer.css">
 
     <script async src="./scripts/insert-div.js?ver=0.0.2"></script>
     <script async src="./scripts/smooth-show.js"></script>
-    <script async src="./scripts/drop-down.js"></script>
+    <script async src="./scripts/drop-down.js?ver=0.0.1"></script>
 
     <style>
         * {
