--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <link rel="shortcut icon" href="./images/icons/page-icons.png" type="image/x-icon">
 
     <link rel="stylesheet" type="text/css" href="styles/header.css">
-    <link rel="stylesheet" type="text/css" href="styles/mainpage.css?ver=0.0.6">
+    <link rel="stylesheet" type="text/css" href="styles/mainpage.css?ver=0.0.7">
     <link rel="stylesheet" type="text/css" href="styles/footer.css">
 
-    <script async src="./scripts/insert-div.js?ver=0.0.3"></script>
+    <script async src="./scripts/insert-div.js?ver=0.0.4"></script>
     <script async src="./scripts/smooth-show.js"></script>
-    <script async src="./scripts/drop-down.js?ver=0.0.2"></script>
+    <script async src="./scripts/drop-down.js?ver=0.0.3"></script>
 
     <style>
         * {
@@ -44,11 +44,11 @@
     
     <main class="container">
         <div id="divViber">
-            <div id="triangle"></div>
+            <!-- <div id="triangle"></div> -->
 
-            <a href="viber://chat?number=380975405113" style="cursor: pointer; transform: translate(0%, -207px); position: fixed; right: 0;"><img class="viber" src="./images/viber_logo.png" width="65vh"></a>
-            <a href="whatsapp://send?phone=380975405113" style="cursor: pointer; transform: translate(0%, -135px); position: fixed; right: 0;"><img class="whatsapp" src="./images/whatsapp_logo.png" width="65vh"></a>
-            <a href="https://t.me/reynesss" target="_blank" style="cursor: pointer; transform: translate(0%, -65px); position: fixed; right: 0;"><img class="telegram" src="./images/telegram_logo.png" width="65vh"></a>
+            <a href="viber://chat?number=380975405113" style="cursor: pointer; transform: translate(0%, -207px); position: fixed; right: 0;"><img class="viber" src="./images/viber_logo.png" width="60vh"></a>
+            <a href="whatsapp://send?phone=380975405113" style="cursor: pointer; transform: translate(0%, -135px); position: fixed; right: 0;"><img class="whatsapp" src="./images/whatsapp_logo.png" width="60vh"></a>
+            <a href="https://t.me/reynesss" target="_blank" style="cursor: pointer; transform: translate(0%, -65px); position: fixed; right: 0;"><img class="telegram" src="./images/telegram_logo.png" width="60vh"></a>
             
             <div class="circle" style="position: fixed; right: 0;"></div>
         </div>
